# x-search

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  FilePreprocessorMain.cpp  Makefile  README.md  checkit.cpp  format_check.sh  metafile_cat.cpp  questions.md  sfgrep.cpp  test.cpp  xsgrep.cpp
.github/workflows/: address-sanitizer-test.yml  build-linux-clang.yml  build-linux-gcc.yml  docker-image.yml  exe-test.yml  thread-sanitizer-test.yml
Benchmarks/: InlineBench_benchmark.py  search_tools_benchmarks.py  xs_benchmarks.py
Benchmarks/cmdbench/: README.md  __init__.py  base.py  gnu_time_benchmark.py
benchmarks/: CMakeLists.txt
benchmarks/search_algorithms/: CMakeLists.txt  count_matches.cpp  count_matches_icase.cpp
benchsuit/: InlineBench_benchmark.py  README.md  benchsuit.py  comparison_benchmark.py  reader_benchmarks.py  search_tools_benchmarks.py  searcher_benchmarks.py  timed  xs_benchmark.py  xs_benchmarks.py
benchsuit/cmdbench/: InlineBench_benchmark.py  __init__.py  base.py  gnu_time_benchmark.py  main.py
benchsuit/results/: xps-benchmarks.csv
benchsuit/results/cache/go/: results.info.json  xs_grep:_chunk_size_(plain)_0.json  xs_grep:_chunk_size_(preprocessed)_0.json  xs_grep:_compressions_(preprocessed)_0.json  xs_grep:_new_line_mapping_data_distance_(preprocessed)_0.json  xs_grep:_number_of_worker_threads_(plain)_0.json  xs_grep:_using_available_options_(-n,_-i)_0.json
benchsuit/results/compare/cache/xps/: comparison:_literal,_byte_offset_0.csv  comparison:_literal,_case_insensitive_0.csv  comparison:_literal,_line_numbers_0.csv  comparison:_literal,_plane_0.csv  comparison:_lz4_compressed_input_file_0.csv  (+6 more)
benchsuit/suits/xs-tasks/: reader.json  searcher.json
benchsuit/suits/xs-tasks/searcher/: literal.json  literal_icase.json  regex.json  regex_icase.json
example/: CMakeLists.txt  grep.cpp  playground.cpp  test.cpp
include/xsearch/: DataChunk.h  Executor.h  ExternSearcher.h  FilePreprocessing.h  MetaFile.h  ResultIterator.h  ResultTypes.h  Searcher.h  concepts.h  types.h  xsearch.h
include/xsearch/pipeline/: Task.h  TaskManager.h
include/xsearch/pipeline/processors/: decompressors.h
include/xsearch/pipeline/reader/: BlockReader.h
include/xsearch/pipeline/result_collectors/: MergeSearchResults.h  grep.h
include/xsearch/pipeline/searchers/: Searchers.h
include/xsearch/results/: Result.h
include/xsearch/results/base/: Result.h
include/xsearch/string_search/: offset_mappings.h  search_wrappers.h  simd_search.h
include/xsearch/tasks/: DataProvider.h  InplaceProcessors.h  Processor.h  ResultCollector.h  ReturnProcessors.h  Searcher.h  processors.h  readers.h  searchers.h
include/xsearch/tasks/base/: DataProvider.h  InplaceProcessor.h  ReturnProcessor.h
include/xsearch/tasks/defaults/: processors.h  readers.h  searchers.h
include/xsearch/utils/: IOColor.h  InlineBench.h  Semaphore.h  Synchronized.h  TSQueue.h  UninitializedAllocator.h  safe_read.h  string_manipulation.h  string_utils.h  utils.h
include/xsearch/utils/ad_utility/: OnDestruction.h  Synchronized.h
include/xsearch/utils/compression/: Lz4Wrapper.h  ZstdWrapper.h
scripts/: all_benchmarks.sh  benchmark_chunk_size.sh  benchmark_compression.sh  benchmark_file_size.sh  benchmark_grep.sh  benchmark_nl_mapping.sh  benchmark_pattern_density.sh  benchmark_pattern_size.sh  createTestFile.py  plot_compression.py  plot_file_size.py  plot_nl_mapping.py  plot_pattern_density.py  plot_pattern_size.py  utilities.py
src/: CMakeLists.txt  DataChunk.cpp  Executor.cpp  ExternSearcher.cpp  FilePreprocessing.cpp  MetaFile.cpp  ResultTypes.cpp  Searcher.cpp  xsearch.cpp
src/pipeline/: CMakeLists.txt  Task.cpp  TaskManager.cpp
src/pipeline/processors/: decompressors.cpp
src/pipeline/readers/: BlockReader.cpp
src/pipeline/result_collectors/: MergeSearchResults.cpp  grep.cpp
src/pipeline/searchers/: Searcher.cpp
src/results/: CMakeLists.txt  Results.cpp
src/results/base/: CMakeLists.txt  Result.cpp
src/string_search/: CMakeLists.txt  offset_mappings.cpp  search_wrappers.cpp  simd_search.cpp
src/tasks/: CMakeLists.txt  DataProvider.cpp  InplaceProcessors.cpp  Processor.cpp  ResultCollector.cpp  ReturnProcessors.cpp  Searcher.cpp
src/tasks/base/: CMakeLists.txt  DataProvider.cpp  InplaceProcessor.cpp  ReturnProcessor.cpp
src/tasks/defaults/: CMakeLists.txt  processors.cpp  readers.cpp  searchers.cpp
src/utils/: CMakeLists.txt  safe_read.cpp  string_manipulation.cpp  string_utils.cpp
task_benchmarks/: CMakeLists.txt
task_benchmarks/readers/: CMakeLists.txt  fread_read.cpp  mmap_read.cpp  posix_read.cpp  std_ifstream_read.cpp
task_benchmarks/searchers/: CMakeLists.txt  boost_regex_search.cpp  re2_search.cpp  simd_search.cpp  std_regex_search.cpp  std_string_find_search.cpp  std_strstr_search.cpp
task_benchmarks/searchers/case/: CMakeLists.txt  re2_literal.cpp  simd_strstr.cpp  std_string_find.cpp  std_strstr.cpp
task_benchmarks/searchers/icase/: CMakeLists.txt  re2_icase_literal.cpp  simd_strcasestr.cpp  simd_tolower_strstr.cpp  std_strcasestr.cpp  std_tolower_strstr.cpp
test/: CMakeLists.txt  test_grep.sh  test_sfgrep.sh  test_xspreprocessor.sh
test/files/: dummy.sflz4  dummy.sfzst  dummy.txt  dummy.txt.sflz4  dummy.txt.sfzst  dummy.xslz4  dummy.xszst  sample.xslz4
test/src/: CMakeLists.txt  DataChunkTest.cpp  ExternSearcherTest.cpp  MetaFileTest.cpp  xsearch.cpp  xsearchTest.cpp
test/src/pipeline/: CMakeLists.txt
test/src/pipeline/processors/: CMakeLists.txt
test/src/pipeline/readers/: CMakeLists.txt
test/src/pipeline/searchers/: CMakeLists.txt
test/src/string_search/: CMakeLists.txt  offset_mappingsTest.cpp  search_wrappersTest.cpp  simd_searchTest.cpp
test/src/tasks/: CMakeLists.txt  processorsTest.cpp  readersTest.cpp  searchersTest.cpp
test/src/utils/: CMakeLists.txt  TSQueueTest.cpp
xsgrep/: CMakeLists.txt  Main.cpp  components.cpp  components.h  main.cpp
xsgrep/tasks/: CMakeLists.txt  GrepOutput.cpp  GrepOutput.h  GrepSearcher.cpp  GrepSearcher.h
xsproc/: CMakeLists.txt  components.cpp  components.h  main.cpp
(+59 files in other folders)
