configure_file(files/sample.txt files/sample.txt COPYONLY)
configure_file(files/sample.meta files/sample.meta COPYONLY)
configure_file(files/sample.xslz4 files/sample.xslz4 COPYONLY)
configure_file(files/sample.xslz4.meta files/sample.xslz4.meta COPYONLY)
configure_file(files/sample.xszst files/sample.xszst COPYONLY)
configure_file(files/sample.xszst.meta files/sample.xszst.meta COPYONLY)
configure_file(files/sample.xslz4hc files/sample.xslz4hc COPYONLY)
configure_file(files/sample.xslz4hc.meta files/sample.xslz4hc.meta COPYONLY)

add_subdirectory(src)