add_executable(fread_read fread_read.cpp)
target_link_libraries(fread_read PUBLIC InlineBench boost_program_options)

add_executable(mmap_read mmap_read.cpp)
target_link_libraries(mmap_read PUBLIC InlineBench boost_program_options)

add_executable(posix_read posix_read.cpp)
target_link_libraries(posix_read PUBLIC InlineBench boost_program_options)

add_executable(std_ifstream_read std_ifstream_read.cpp)
target_link_libraries(std_ifstream_read PUBLIC InlineBench boost_program_options)